# mpi-project-exploration

./: .editorconfig  .fprettify.rc  .gitignore  .pre-commit-config.yaml  README.md  ford.md  fpm.rsp  fpm.toml  pyproject.toml
app/: sendrecv_1D.f90  sendrecv_3D.f90  simple_mpi_f08.f90
docs/: PROFILING.md  issue_list.md
maqao/: template_mpi.json
src/: boundary.f90  enums.f90  grid_module.f90  lib_mpi_enums.f90  lib_mpi_halo.f90  lib_mpi_parameters.f90  lib_mpi_precision.f90  lib_parameters.f90  mpi_domain.f90  mpi_domain_extended_neighbors.f90  mpi_domain_types.f90  mpi_halo.f90  mpi_interface.f90  parameters.f90  precision.f90  test_boundary.f90  test_halo.f90
test/: check.f90  test_invalid_bc.f90  test_mpi_extended_neighbors.f90  test_sendrecv_1D.f90  test_sendrecv_3D.f90  test_simple_mpi_f08.f90
