[project]
name = "mpi-project-exploration"
version = "2024.0.1"
description = "A simple Fortran MPI project to explore ideas."
dependencies = [
    "fpm",
    "ford",
    "graphviz",
]
requires-python = ">=3.8"
authors = [
  { name = "Your name", email = "your@email.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["fortran", "modern fortran", "mpi", "vscode"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Fortran",
]

[project.optional-dependencies]
dev = [
    "fortls",
    "fprettify",
    "pre-commit",
    "fortitude-lint",
]

[project.urls]
Homepage = "https://github.com/MatthAlex/mpi-project-exploration"
Documentation = "https://github.com/MatthAlex/mpi-project-exploration/README.md"
Repository = "https://github.com/MatthAlex/mpi-project-exploration"
"Bug Tracker" = "https://github.com/MatthAlex/mpi-project-exploration/issues"
Changelog = "https://github.com/MatthAlex/mpi-project-exploration/master/CHANGELOG.md"
