[project]
name = "mpi-cartesian-library"
version = "v0.1.0"
description = "A Modern Fortran MPI cartesian library for stencil operations."
dependencies = [
    "fpm",
    "ford",
    "graphviz",
]
requires-python = ">=3.10"
authors = [
  { name = "Matt Alexandrakis", email = "matthaios.alexandrakis@gre.ac.uk" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["fortran", "modern fortran", "mpi", "vscode"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Fortran",
]

[project.optional-dependencies]
dev = [
    "fortls",
    "pre-commit",
    "fortitude-lint",
]

[project.urls]
Homepage = "https://github.com/MatthAlex/mpi-project-exploration"
Documentation = "https://github.com/MatthAlex/mpi-project-exploration/README.md"
Repository = "https://github.com/MatthAlex/mpi-project-exploration"
"Bug Tracker" = "https://github.com/MatthAlex/mpi-project-exploration/issues"
Changelog = "https://github.com/MatthAlex/mpi-project-exploration/master/CHANGELOG.md"
